--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ozzrocker95/creacion-de-paquetes-npm-aitor-nestor-omar-35l2v3-1-square/issues"
   },
-  "homepage": "https://github.com/ozzrocker95/creacion-de-paquetes-npm-aitor-nestor-omar-35l2v3-1-square#readme"
+  "homepage": "https://github.com/ozzrocker95/creacion-de-paquetes-npm-aitor-nestor-omar-35l2v3-1-square#readme",
+  "dependencies": {
+    "creacion-de-paquetes-npm-aitornestoromar-rectangle": "^1.0.0"
+  }
 }
