--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Repositorio para el módulo npm de la figura geométrica square (aitor-nestor-omar)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha --require should"
   },
   "repository": {
     "type": "git",
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/ozzrocker95/creacion-de-paquetes-npm-aitor-nestor-omar-35l2v3-1-square#readme",
   "dependencies": {
-    "creacion-de-paquetes-npm-aitornestoromar-rectangle": "^1.0.0"
+    "creacion-de-paquetes-npm-aitornestoromar-rectangle": "^1.0.0",
+    "gulp-shell": "^0.6.3",
+    "mocha": "^3.2.0",
+    "should": "^11.2.1",
+    "ull-shape-aitor-nestor-omar-35l2v3-1": "^1.0.3"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
