--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ull-shape-square-aitor-nestor-omar-35l2v3-1",
+  "name": "@aitor-nestor-omar/ull-shape-square-aitor-nestor-omar-35l2v3-1",
   "version": "1.0.3",
   "description": "Repositorio para el módulo npm de la figura geométrica square (aitor-nestor-omar)",
   "main": "index.js",
